--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 # site domain, full URL to the production location of your collection
 url: http://dna.nust.na
 # path to location on the domain if necessary e.g. /digital/hjccc
-baseurl: /heritage-week
+baseurl: /heritage_week
 # location of code, the full url to your github repository
 source-code: https://github.com/CollectionBuilder/collectionbuilder-sa
 
@@ -39,11 +39,11 @@ organization-logo-nav: https://www.lib.uidaho.edu/media/digital/bannerlogo_allwh
 # If using local folder, dir name with proceeding slash. If using external web location, provide full URL
 objects: /objects 
 # choose metadata: this is the name of the csv file in your _data directory that describes the objects in your collection
-metadata: demo-metadata
+metadata: heritageweek
 # page generation settings 
 # "data" value must be the name of the metadata file (other values should be not be changed)
 page_gen:
-  - data: 'heritage_week'
+  - data: 'heritageweek'
     template: 'items'
     name: 'objectid'
     dir: 'items'
@@ -55,7 +55,7 @@ page_gen:
 #
 # leave these blank or comment out to NOT include google code
 # if present, used to add analytics during "production" build only
-# google-analytics-id: "UA-74844011-1"
+google-analytics-id: "UA-109484527-1"
 # google-cse-id: "002151703305773322890:1pu3smhw1t8"
 
 ##########
@@ -77,4 +77,3 @@ exclude: [docs/, Rakefile, README.md, LICENSE]
 sass:
   style: compressed
 
-theme: jekyll-theme-cayman
