--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -99,7 +99,7 @@ navbar-background: bg-primary
 # BOOTSWATCH THEMES
 # You can replace the standard Bootstrap theme with a Bootswatch (https://github.com/thomaspark/bootswatch) option
 # Choose from: cerulean; cosmo; cyborg; darkly; flatly; journal; litera; lumen; lux; materia; minty; pulse; sandstone; simplex; sketchy; slate; solar; spacelab; superhero; united; yeti 
-bootswatch: # leave blank or comment out for plain bootstrap
+bootswatch: minty # leave blank or comment out for plain bootstrap
 
 # THEME FONTS
 base-font-size: 1.2em
