--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -8,7 +8,7 @@
 #
 # featured image is used in home page banner and in meta markup to represent the collection
 # use either an objectid (from an item in this collect), a relative location of an image in this repo, or a full url to an image elsewhere
-featured-image: CHN_NEG_HAHN_img_043184
+featured-image: facebook-header
 # optional: add extra padding around collection title for a larger image feature. 
 home-title-y-padding: 12em # the margin from the top your title portion will appear.
 # optional: change position of background image, center, top, bottom
@@ -28,7 +28,7 @@ featured-locations-max: 3 # set number of top locations to display if auto gener
 #
 # Featured image on About page - if left blank, CB will use image featured on the home page
 # use either an objectid (from an item in this collect), a relative location of an image in this repo, or a full url to an image elsewhere
-about-featured-image: Heritage Week 2020
+about-featured-image: Namibia Heritage Week 2020
 
 ##########
 # BROWSE PAGE
@@ -45,8 +45,9 @@ browse-buttons: true # true / false, adds previous/next arrows to items, but inc
 ##########
 # SUBJECTS PAGE
 #
-subjects-fields: subject;creator;title;description # set of fields separated by ; to be featured in the cloud (leave blank or comment out to not generate)
-subjects-min: 3 # min size for subject cloud, too many terms = slow load time!
+subjects-fields: subject;creator;title;description;  # set of fields separated by ; to be featured in the cloud (leave blank or comment out to not generate)
+subjects-min: 3 
+## min size for subject cloud, too many terms = slow load time!
 subjects-stopwords: # set of subjects separated by ; that will be removed from display, e.g. boxers;boxing
 
 ##########
@@ -60,19 +61,19 @@ locations-stopwords: # set of subjects separated by ; that will be removed from 
 # MAP PAGE
 #
 # see _data/map-config.csv for field display options
-latitude: -22.57 #to determine center of map
+latitude: -20.57 #to determine center of map
 longitude: 17.083611 #to determine center of map
 zoom-level: 3 # zoom level for map 
 map-base: Esri_WorldStreetMap # set default base map, choose from: Esri_WorldStreetMap, Esri_NatGeoWorldMap, Esri_WorldImagery
 map-search: true # not suggested with large collections
 map-search-fuzziness: 0.35 # fuzzy search range from 1 = anything to 0 = exact match only
 map-cluster: true # suggested for large collection or with many items in same location
-map-cluster-radius: 25 # size of clusters, from ~ 10 to 80
+map-cluster-radius: 20 # size of clusters, from ~ 10 to 80
 
 ##########
 # TIMELINE PAGE
 #
-year-navigation: "1929;1956;1985;1989" # manually set years to appear in dropdown nav
+year-navigation: "1899;1929;1956;1985;1989;1995;" # manually set years to appear in dropdown nav
 year-nav-increment: 1 # set increments to auto gen nav years
 
 ##########
